# celery-task

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.MD  docker-compose.yml  pyproject.toml  zadanie.md
core/: __init__.py  settings.py  urls.py
emails/: admin.py  filters.py  models.py  serializers.py  tasks.py  urls.py  views.py
emails/migrations/: 0001_initial.py
templates/emails/: notification.html  welcome.html
